--- a/server/views/index.pug
+++ b/server/views/index.pug
@@ -2,4 +2,7 @@ extends layout
 
 block content
   h1= title
+  h2= wallet
   p Welcome to #{title}
+  p Wallet = #{wallet}
+  p Balance = #{balance}
