--- a/client/src/styles/App.scss
+++ b/client/src/styles/App.scss
@@ -9,6 +9,7 @@ $icon-bg-color: rgba(255, 255, 255, 0.05);
 $icon-size: 35px;
 
 @import '~react-pro-sidebar/dist/scss/styles.scss';
+
 body {
   margin: 0;
   height: 100vh;
@@ -31,21 +32,51 @@ a:link, a:visited, a:hover, a:hover {
 }> span {
   margin-left: 10px;
 }
-
+.home {
+    background-color: #F6F8FA;
+    flex-grow: 1;
+}
+.profile {
+    background-color: #F6F8FA;
+    flex-grow: 1;
+}
 .screen {
     width: 100%;
     height: 100%;
     margin-left: 270px;
     display: flex;
+    flex-grow: 1;
+
     flex-direction: column;
-    justify-content: space-between;
+    align-items: stretch;
 }
 
 .pro-sidebar {
     position: fixed;
     overflow-x: hidden;
+    box-shadow: 0 0px 16px 0 rgba(0,0,0,0.2);
 }
 
+.topNav {
+    padding-top: 2px;
+    height: 60px;
+    display: flex;
+    justify-content: space-between;
+    box-shadow: 0 2px 4px 0 rgba(0,0,0,0.2);
+    margin-bottom: 3px;
+}
+.topNav input[type=text] {
+    padding-left: 10px;
+    font-size:18px;
+    border: 0px; 
+    height: 80%;
+}
+input:focus { outline: none; }
+
+.header-form {
+    padding-left: 40px;
+    height: 100%;
+}
 
 #root {
   height: 100%;
@@ -234,3 +265,4 @@ footer {
 .block {
     flex-direction: row-reverse;
 }
+
