update: send UI src and connect backend for send nft

--- a/client/src/styles/App.scss
+++ b/client/src/styles/App.scss
@@ -18,11 +18,13 @@ body {
   font-family: 'Roboto', sans-serif;
   display:flex;
 }
+
 a:link, a:visited, a:hover, a:hover {
   text-align: center;
   text-decoration: none; /* 링크의 밑줄 제거 */
   color: inherit; /* 링크의 색상 제거 */
 }
+
 .main {
     display: flex;
     height: 100%;
@@ -40,6 +42,81 @@ a:link, a:visited, a:hover, a:hover {
     background-color: #F6F8FA;
     flex-grow: 1;
 }
+
+/**
+ *
+ * send 페이지와 관련된 부분
+ *
+ **/
+
+.send {
+    background-color: #F6F8FA;
+    flex-grow: 1;
+    flex-direction: row;
+
+}
+.send-token-main {
+    width: 80%;
+}
+
+.send-tokenlist {
+    background-color: #fff;
+    width: 100%;
+    display: flex;
+    box-shadow: 0 3px 6px rgba(0,0,0,0.16), 0 3px 6px rgba(0,0,0,0.23);
+    border-radius: 7px ;
+}
+
+.send-tokenMain {
+    padding-top: 40px;
+    padding-bottom: 40px;
+    display: flex;
+    justify-content: center;
+}
+
+.send-erc721list {
+    width: 100%;
+    border-radius: 7px;
+
+}
+
+.send-erc721list-header {
+    padding: 5px;
+    border-bottom: 1px solid #E1E5EB;
+}
+
+.erc721list-line {
+    border-bottom: 1px solid #E1E5EB;
+}
+
+.send-erc721token{
+    display: flex;
+    justify-content: space-between;
+    padding: 5px;
+
+    display: flex;
+    border-bottom: 1px solid #E1E5EB;
+}
+
+.erc721token > div > img{ 
+    border-radius: 10px;
+}
+
+.send-erc721token-exp {
+    flex-grow: 1;
+    margin-left: 20px;
+}
+
+.send-toAddressToken > input{
+    border: 1px solid #E1E5EB;
+    height: 24px;
+    width: 240px;
+    margin-right: 5px;
+}
+
+/*
+footer, header, sidebar에 관련된 부분
+*/
 .screen {
     width: 100%;
     height: 100%;
@@ -71,7 +148,9 @@ a:link, a:visited, a:hover, a:hover {
     border: 0px; 
     height: 80%;
 }
+
 input:focus { outline: none; }
+
 
 .header-form {
     padding-left: 40px;
@@ -83,6 +162,12 @@ input:focus { outline: none; }
   width: 100%;
 }
 
+
+/**
+ *
+ *sidebar 관련된 부분
+ *
+ **/
 .app {
   height: 100%;
   display: flex;
@@ -232,8 +317,10 @@ input:focus { outline: none; }
     }
   }
 }
+
 footer {
   color: #888;
+  margin-top: 20px;
   text-align: center;
   a {
     text-decoration: none;
@@ -243,6 +330,7 @@ footer {
     }
   }
 }
+
 .badge {
   padding: 3px 6px;
   font-size: 9px;
